# xiaohui-agentic-playground

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: 001-jupyter-notebook-mcp.mdc
1-agentic-workflow/: agentic_systems.ipynb
2-openai-sdk/smart_shopping_assistant/: README.md  smart_shopping_assistant.ipynb
2-openai-sdk/smart_shopping_assistent/: smart_shopping_assistent.ipynb
3-crew-ai/sensei/: .gitignore  README.md  pyproject.toml
3-crew-ai/sensei/docs/: BACKEND_DESIGN.md  FRONTEND_DESIGN.md  PLANNING.md  PROPOSED_FILE_ARCHITECTURE.md
3-crew-ai/sensei/src/sensei/: __init__.py  app.py
3-crew-ai/sensei/src/sensei/crews/: __init__.py
3-crew-ai/sensei/src/sensei/crews/assessment_crew/: __init__.py  assessment_crew.py
3-crew-ai/sensei/src/sensei/crews/assessment_crew/config/: agents.yaml  tasks.yaml
3-crew-ai/sensei/src/sensei/crews/curriculum_crew/: __init__.py  curriculum_crew.py
3-crew-ai/sensei/src/sensei/crews/curriculum_crew/config/: agents.yaml  tasks.yaml
3-crew-ai/sensei/src/sensei/crews/teaching_crew/: __init__.py  teaching_crew.py
3-crew-ai/sensei/src/sensei/crews/teaching_crew/config/: agents.yaml  tasks.yaml
3-crew-ai/sensei/src/sensei/models/: __init__.py  enums.py  schemas.py
3-crew-ai/sensei/src/sensei/services/: __init__.py  course_service.py  learning_service.py  progress_service.py  quiz_service.py  user_service.py
3-crew-ai/sensei/src/sensei/storage/: __init__.py  database.py  file_storage.py  memory_manager.py
3-crew-ai/sensei/src/sensei/ui/: __init__.py
3-crew-ai/sensei/src/sensei/ui/components/: __init__.py  chat_interface.py  concept_viewer.py  course_card.py  quiz_question.py  sidebar.py
3-crew-ai/sensei/src/sensei/ui/pages/: __init__.py  dashboard.py  learning.py  new_course.py  onboarding.py  progress.py  quiz.py  settings.py
3-crew-ai/sensei/src/sensei/utils/: __init__.py  constants.py  formatters.py  state.py  tracing.py
3-crew-ai/sensei/tests/: __init__.py  conftest.py  test_app.py
3-crew-ai/sensei/tests/test_crews/: test_assessment_crew.py  test_curriculum_crew.py  test_teaching_crew.py
3-crew-ai/sensei/tests/test_functional/: __init__.py  conftest.py  test_assessment_crew_functional.py  test_curriculum_crew_functional.py  test_teaching_crew_functional.py
3-crew-ai/sensei/tests/test_models/: __init__.py  test_enums.py  test_schemas.py
3-crew-ai/sensei/tests/test_services/: __init__.py  test_course_service.py  test_learning_service.py  test_progress_service.py  test_quiz_service.py  test_user_service.py
3-crew-ai/sensei/tests/test_storage/: test_database.py  test_file_storage.py  test_memory_manager.py
3-crew-ai/sensei/tests/test_ui/: conftest.py  test_chat_interface.py  test_concept_viewer.py  test_course_card.py  test_quiz_question.py  test_sidebar.py
3-crew-ai/sensei/tests/test_ui/test_pages/: test_dashboard.py  test_learning.py  test_new_course.py  test_onboarding.py  test_progress.py  test_quiz.py  test_settings.py
3-crew-ai/sensei/tests/test_utils/: test_constants.py  test_formatters.py  test_state.py
3-crew-ai/smart_shopping_assistant/: README.md  pyproject.toml
3-crew-ai/smart_shopping_assistant/src/smart_shopping_assistant/: main.py
3-crew-ai/smart_shopping_assistant/src/smart_shopping_assistant/crews/smart_shopping_assistant_crew/: smart_shopping_assistant_crew.py
3-crew-ai/smart_shopping_assistant/src/smart_shopping_assistant/crews/smart_shopping_assistant_crew/config/: agents.yaml  tasks.yaml
3-crew-ai/smart_shopping_assistant/src/smart_shopping_assistant/output/: shopping_result_20251229_225253.txt  shopping_result_20251229_225355.txt  shopping_result_20251229_225742.txt
3-crew-ai/smart_shopping_assistant/src/smart_shopping_assistant/tools/: custom_tool.py
4-langgraph/email_battle/: README.md  __init__.py  app.py  graph.py  models.py  nodes.py  prompts.py  utils.py
5-autogen/email_battle/: README.md  email_battle_autogen.ipynb
6-open-source/: FINE_TUNING_STUDY_PLAN.md  README.md  docker-compose-dual-medium.yml  docker-compose-finetune.yml  docker-compose-gpt-oss.yml  docker-compose-peft.yml  docker-compose-qwen7b-ag-full-fine-tuned.yml  docker-compose-qwen7b.yml  docker-compose-single.yml  finetune_template.py  start_docker.sh  test_inference.py
6-open-source/dual_model_speed_test/: README.md  speed_test.ipynb
6-open-source/email_battle_open_source/: .gitignore  README.md  pyproject.toml
6-open-source/email_battle_open_source/src/email_battle/: __init__.py  main.py
6-open-source/email_battle_open_source/src/email_battle/crews/email_battle_crew/: __init__.py  email_battle_crew.py
6-open-source/email_battle_open_source/src/email_battle/crews/email_battle_crew/config/: agents.yaml
6-open-source/email_battle_open_source/src/email_battle/tools/: __init__.py  custom_tool.py
6-open-source/fine-tuning-dense/: Dockerfile.dgx-spark  README.md  base_model_performance.ipynb  base_model_results.json  fine_tuning_full.ipynb  fine_tuning_full_unsloth.ipynb  fine_tuning_lora.ipynb  fine_tuning_qlora.ipynb  finetuned_model_results.json  full_finetuned_results.json  full_finetuning_performance.ipynb  lora_fine_tuning_performance.ipynb  lora_finetuned_results.json  qlora_fine_tuned_results.json  qlora_fine_tuning_performance.ipynb
6-open-source/fine-tuning-dense/adapters/: .gitkeep
6-open-source/fine-tuning-dense/checkpoints/: .gitkeep
6-open-source/fine-tuning-dense/data_prep/: README.md  __init__.py  config.py  convert_dataset.py
6-open-source/fine-tuning-dense/datasets/: .gitkeep
6-open-source/fine-tuning-peft/: fine_tuning_lora.ipynb  fine_tuning_qlora.ipynb
6-open-source/fine-tuning-peft/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  (+3 more)
6-open-source/qwe3_coder_next_speed_test/: speed_test.ipynb
6-open-source/single_model_speed_test/: README.md  speed_test.ipynb  speed_test_gpt.ipynb
