[project]
name = "xiaohui-agentic-playground"
version = "0.1.0"
description = "A playground for agentic experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.0",
    "openai>=2.14.0",
    "openai-agents>=0.6.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "nest-asyncio>=1.6.0",
    # LangGraph dependencies
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # AutoGen dependencies (Microsoft)
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
]

[project.optional-dependencies]
# Fine-tuning dependencies (GPU required)
finetune = [
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "trl>=0.27.0",
    "accelerate>=1.12.0",
    "peft>=0.18.0",
]

[tool.uv]
# PyTorch CUDA 12.6 index for GPU support
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
# Allow mixing packages from PyPI and PyTorch index
index-strategy = "unsafe-best-match"
