[project]
name = "xiaohui-agentic-playground"
version = "0.1.0"
description = "A playground for agentic experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.0",
    "openai>=2.14.0",
    "openai-agents>=0.6.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "nest-asyncio>=1.6.0",
    # LangGraph dependencies
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # AutoGen dependencies (Microsoft)
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
]

# Note: Fine-tuning dependencies (torch, transformers, trl, etc.) are NOT included here.
# Full fine-tuning runs inside NVIDIA's PyTorch Docker container (nvcr.io/nvidia/pytorch:25.11-py3)
# which provides native sm_121 support for DGX Spark's Blackwell GB10 GPU.
# See 6-open-source/README.md for fine-tuning instructions.
