[project]
name = "sensei"
version = "0.1.0"
description = "AI-Powered Adaptive Learning Tutor built with CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "streamlit>=1.41.0",
    "pydantic>=2.10.0",
    "openai>=1.59.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensei"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "functional: marks tests that make real LLM API calls (deselect with '-m \"not functional\"')",
]
