[project]
name = "sensei"
version = "0.1.0"
description = "AI-Powered Adaptive Learning Tutor built with CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai,anthropic]>=0.86.0",
    "crewai-tools>=0.17.0",
    "streamlit>=1.41.0",
    "pydantic>=2.10.0",
    "openai>=1.59.0",
    # LangSmith tracing integration
    "langsmith>=0.2.0",
    "openinference-instrumentation-crewai>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensei"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --ignore=tests/test_functional --ignore=tests/test_e2e"
markers = [
    "functional: marks tests that make real LLM API calls (deselect with '-m \"not functional\"')",
    "e2e: marks end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["src/sensei"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 90

[project.scripts]
sensei-test = "pytest:main"

# Note: To run the Streamlit app, use:
#   streamlit run src/sensei/app.py
# or:
#   uv run streamlit run src/sensei/app.py
