[project]
name = "smart_shopping_assistant"
version = "0.1.0"
description = "smart_shopping_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.scripts]
kickoff = "smart_shopping_assistant.main:kickoff"
run_crew = "smart_shopping_assistant.main:kickoff"
plot = "smart_shopping_assistant.main:plot"
run_with_trigger = "smart_shopping_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
