[project]
name = "email_battle_open_source"
version = "0.1.0"
description = "Email Battle using local open-source LLMs (Qwen3 + Mistral) via vLLM"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "openai>=1.0.0",
    "litellm>=1.0.0",
]

[project.scripts]
kickoff = "email_battle.main:kickoff"
run_crew = "email_battle.main:kickoff"
plot = "email_battle.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_battle"]

[tool.crewai]
type = "flow"
